--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.24.0",
+    "rehype-raw": "^7.0.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
