--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.24.0",
+    "react-spinners": "^0.14.1",
     "rehype-raw": "^7.0.0",
     "sort-by": "^1.2.0"
   },
