--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.24.0",
     "react-spinners": "^0.14.1",
